# residuals-visuals

./: .gitignore  LICENSE  README.md  bucket-policy.json  cf-config.json  config.py  pyproject.toml  requirements.txt
blender/: render_atlas.py
exploration/: 01_locate_feature.py  02_overview_full.py  03_crop_preview.py
scripts/: 01_build_catalog.py  02_build_zoo.py  03_build_sweeps.py  04_compute_signatures.py  05_compute_umap.py  06_render_atlas.py  07_compute_umap_3d.py  08_build_explorer.py  09_export_for_blender.py  10_package_zenodo.py  11_package_hf.py  11b_patch_hf_params.py  12_deploy_zenodo.py  13_deploy_hf.py  13b_deploy_hf_pyapi.py
site/: index.html
src/: atlas.py  catalog.py  explorer.py  load.py  render.py  signatures.py  sweep.py  zoo.py
