[project]
name = "diverge-visuals"
version = "0.1.0"
description = "Artistic and educational visualizations of the RESIDUALS exhaustive parameter sweep"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
